Bug fix and code rewrite to fit the video without white space to the right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,11 @@ main {
 
 /* Hero section */
 /* Make hero video full length and under the navbar */
+
 #hero-video {
+  width: 100%; 
+  height: 100%;
   object-fit: cover;
-  position: relative;
-  width: 100vw; /* Take full width of the viewport */
-  height: 60vh; /* Take 60% of the viewport height */
-  /* background-image: ; add fall-back image */
-  overflow: hidden;
-  display: block; /* Remove extra white line below the video */
 }
 
 .hero-text {
